Changed more box shadows to be more uniform, fixed alignment on some divs

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -95,6 +95,10 @@ html,body {
     background-color: #EBECF0;
 }
 
+.members-title {
+    border-bottom: 1px solid black;
+}
+
 .view, .back-btn {
     background-color: #0D3480;
     border: none;
